--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    overflow: hidden;
 }
